--- a/WebDemo2/WebDemo2.csproj
+++ b/WebDemo2/WebDemo2.csproj
@@ -129,16 +129,24 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\BaiVietMoTaController.cs" />
     <Compile Include="Controllers\KhachHangController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\DonHangController.cs" />
+    <Compile Include="Controllers\LoaiBaiVietController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="Models\BaiVietMoTa.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\BangMayTinh.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\KhachHang.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\LoaiBaiViet.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\Model1.Context.cs">
@@ -283,9 +291,16 @@
     <Content Include="Views\DonHang\DanhSach.cshtml" />
     <Content Include="Views\DonHang\Create.cshtml" />
     <Content Include="Views\DonHang\Edit.cshtml" />
+    <Content Include="Views\BaiVietMoTa\Index.cshtml" />
+    <Content Include="Views\BaiVietMoTa\Themmoi.cshtml" />
+    <Content Include="Views\BaiVietMoTa\Edit.cshtml" />
+    <Content Include="Views\LoaiBaiViet\DanhSach.cshtml" />
+    <Content Include="Views\LoaiBaiViet\ThemMoi.cshtml" />
+    <Content Include="Views\LoaiBaiViet\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Data\" />
     <Folder Include="frontend\icon\" />
   </ItemGroup>
   <ItemGroup>
